<resources>
    <string name="app_name">DeadReckoningApplication</string>
    <string name="magnetometer">Magnetometer: </string>
    <string name="acceleration">Acceleration: </string>
    <string name="step_counter">Step Counter: </string>
    <string name="barometer">Orientation: </string>
    <string name="latitude">Gps Latitude: </string>
    <string name="longitude">View Map </string>
    <string name="view_wgb_map">View WGB Map</string>
</resources>