<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/accelText"
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/magnometerText" />

    <TextView
        android:id="@+id/stepCounterText"
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/accelText" />

    <TextView
        android:id="@+id/magnometerText"
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toRightOf="@+id/editTextText"
        app:layout_constraintTop_toTopOf="@+id/editTextText" />


    <TextView
        android:id="@+id/barometerText"
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/editTextText"
        android:layout_width="100dp"
        android:layout_height="81dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:text="@string/magnetometer"
        app:layout_constraintEnd_toStartOf="@+id/magnometerText"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/acceleration"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="81dp"
        android:layout_marginTop="44dp"
        android:text="@string/step_counter"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="81dp"
        android:layout_marginTop="44dp"
        android:text="@string/barometer"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <TextView
        android:id="@+id/gpsLat"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:text="@string/latitude"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/longitude"
        app:layout_constraintEnd_toEndOf="@+id/gpsLat"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/gpsLat"
        app:layout_constraintTop_toBottomOf="@+id/gpsLat" />


</androidx.constraintlayout.widget.ConstraintLayout>